--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build production bundle
         uses: borales/actions-yarn@v4
         with:
-          cmd: build:prod # will run `yarn build:prod` command
+          cmd: build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
